Refactor georesource manager